update offers and some naming

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -54,7 +54,7 @@
     }(window.location))
   </script>
   <script src="https://checkout.razorpay.com/v1/checkout.js" defer></script>
-  <title>Onesnack</title>
+  <title>NutriiNuts</title>
 </head>
 <body>
   <!-- Google Tag Manager (noscript) -->
